DuPont DevSB/src/objects/FF_PSA_Recommended_Pricing_Option__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Once Risk survey &amp; ROI is completed, system will be suggesting the pricing option based upon the master data threshold</description>
    <fields>
        <fullName>FF_PSA_Maximum_Risk_Rating__c</fullName>
        <label>Maximum Risk Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Minimum_Risk_Rating__c</fullName>
        <label>Minimum Risk Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Value_to_Client__c</fullName>
        <description>Value to Client value will be update from ROI tool</description>
        <label>Value to Client</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>FF PSA Recommended Pricing Option</label>
</CustomObject>